--- a/src/app/websites/login/login.component.html
+++ b/src/app/websites/login/login.component.html
@@ -53,6 +53,6 @@
     <mat-label>CONTRASEÑA</mat-label>
       <input matInput placehoder="Contraseña"  [(ngModel)]="loginData.password"  type="password">
   </mat-form-field>
-      <button mat-raised-button color="primary" type="submit" (click) = "onLogin()">Iniciar Sesion</button>
+      <button mat-raised-button color="primary" (click) = "onLogin()">Iniciar Sesion</button>
 </mat-card>
  -->
