--- a/src/app/dashboard/modify/modifyperson/modifyperson.component.scss
+++ b/src/app/dashboard/modify/modifyperson/modifyperson.component.scss
@@ -45,3 +45,25 @@ a.mat-stroked-button .mat-icon {
 .btn2:hover{
   background-color: greenyellow;
 }
+.label{
+  font-weight: lighter;
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.content{
+
+  border-width:1px;
+  border-color:cornflowerblue;
+  border-style:solid;
+  border-radius: 5px;
+
+
+}
+
+mat-dialog-content{
+  margin: 5px;
+}
+.auto-field {
+  margin-left: 20px;
+}
