--- a/src/app/dashboard/create/listusers/listusers.component.html
+++ b/src/app/dashboard/create/listusers/listusers.component.html
@@ -3,13 +3,13 @@
 
 
 <div fxLayout fxLayoutAlign="center center" >
-  
+
   <mat-form-field fxFlex="40%" >
 
     <input matInput type="text" (keyup)="applyFilter($event)" placeholder="BUSCAR"  #input >
-      
+
   </mat-form-field>
-  
+
 
 </div>
 
@@ -58,6 +58,6 @@
 
   <!-- Row shown when there is no matching data. -->
    <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro  "{{input.value}}"</td>
   </tr>
 </table>
